src/kcmkwin/kwindesktop/desktopsmodel.cpp
@@ -37,7 +37,6 @@ DesktopsModel::DesktopsModel(QObject *parent)
     , m_serverModified(false)
     , m_serverSideRows(-1)
     , m_rows(-1)
-    , m_synchronizing(false)
 {
     qDBusRegisterMetaType<KWin::DBusDesktopDataStruct>();
     qDBusRegisterMetaType<KWin::DBusDesktopDataVector>();
@@ -239,14 +238,14 @@ void DesktopsModel::setDesktopName(const QString &id, const QString &name)
 
 void DesktopsModel::syncWithServer()
 {
-    m_synchronizing = true;
-
     auto callFinished = [this](QDBusPendingCallWatcher *call) {
         QDBusPendingReply<void> reply = *call;
 
         if (reply.isError()) {
             handleCallError();
         }
+
+        --m_pendingCalls;
 
         call->deleteLater();
     };
@@ -262,6 +261,7 @@ void DesktopsModel::syncWithServer()
 
         call.setArguments({(uint)newIndex, m_names.value(m_desktops.at(newIndex))});
 
+        ++m_pendingCalls;
         QDBusPendingCall pending = QDBusConnection::sessionBus().asyncCall(call);
 
         const auto *watcher = new QDBusPendingCallWatcher(pending, this);
@@ -288,6 +288,7 @@ void DesktopsModel::syncWithServer()
 
                 call.setArguments({previous});
 
+                ++m_pendingCalls;
                 QDBusPendingCall pending = QDBusConnection::sessionBus().asyncCall(call);
 
                 const QDBusPendingCallWatcher *watcher = new QDBusPendingCallWatcher(pending, this);
@@ -325,6 +326,7 @@ void DesktopsModel::syncWithServer()
 
                 call.setArguments({i.key(), i.value()});
 
+                ++m_pendingCalls;
                 QDBusPendingCall pending = QDBusConnection::sessionBus().asyncCall(call);
 
                 const QDBusPendingCallWatcher *watcher = new QDBusPendingCallWatcher(pending, this);
@@ -349,6 +351,7 @@ void DesktopsModel::syncWithServer()
         call.setArguments({s_virtualDesktopsInterface,
             QStringLiteral("rows"), QVariant::fromValue(QDBusVariant(QVariant((uint)m_rows)))});
 
+        ++m_pendingCalls;
         QDBusPendingCall pending = QDBusConnection::sessionBus().asyncCall(call);
 
         const QDBusPendingCallWatcher *watcher = new QDBusPendingCallWatcher(pending, this);
@@ -358,8 +361,6 @@ void DesktopsModel::syncWithServer()
 
 void DesktopsModel::reset()
 {
-    m_synchronizing = false; // Sanity.
-
     auto getAllAndConnectCall = QDBusMessage::createMethodCall(
         s_serviceName,
         s_virtDesktopsPath,
@@ -638,10 +639,8 @@ void DesktopsModel::updateModifiedState(bool server)
 
         m_serverModified = false;
         emit serverModifiedChanged();
-
-        m_synchronizing = false;
     } else {
-        if (m_synchronizing) {
+        if (m_pendingCalls > 0) {
             m_serverModified = false;
             emit serverModifiedChanged();
 
@@ -658,8 +657,7 @@ void DesktopsModel::updateModifiedState(bool server)
 
 void DesktopsModel::handleCallError()
 {
-    if (m_synchronizing) {
-        m_synchronizing = false;
+    if (m_pendingCalls > 0) {
 
         m_serverModified = false;
         emit serverModifiedChanged();
