src/kcmkwin/kwindesktop/desktopsmodel.h
@@ -120,7 +120,7 @@ private:
     QStringList m_desktops;
     QHash<QString,QString> m_names;
     int m_rows;
-    bool m_synchronizing;
+    int m_pendingCalls = 0;
 };
 
 }
